manifests/eks-demo/manifests/keycloak/only_keycloak_no_postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
    app.kubernetes.io/instance: qliksense
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloak
    helm.sh/chart: keycloak-7.6.0
    release: qliksense
    service: headless
  name: qliksense-keycloak-headless
  namespace: default
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app: keycloak
    app.kubernetes.io/instance: qliksense
    app.kubernetes.io/name: keycloak
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
    app.kubernetes.io/instance: qliksense
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloak
    helm.sh/chart: keycloak-7.6.0
    release: qliksense
    service: http
  name: qliksense-keycloak-http
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app: keycloak
    app.kubernetes.io/instance: qliksense
    app.kubernetes.io/name: keycloak
  type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: keycloak
    app.kubernetes.io/instance: qliksense
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloak
    helm.sh/chart: keycloak-7.6.0
    release: qliksense
  name: qliksense-keycloak
  namespace: default
spec:
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
      app.kubernetes.io/instance: qliksense
      app.kubernetes.io/name: keycloak
  serviceName: qliksense-keycloak-headless
  template:
    metadata:
      annotations:
        checksum/config-sh: 5aee0686bc0df7b819569f71611a0f54498802136057e3a607f1d407a582043e
        checksum/config-startup: 022e615cc24dacb5a1427487f9a7308c5f2e8b849533a90c795290f652e809f3
      labels:
        app: keycloak
        app.kubernetes.io/instance: qliksense
        app.kubernetes.io/name: keycloak
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: role
                  operator: NotIn
                  values:
                  - test
                matchLabels:
                  app: keycloak
                  app.kubernetes.io/instance: qliksense
                  app.kubernetes.io/name: keycloak
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: role
                operator: NotIn
                values:
                - test
              matchLabels:
                app: keycloak
                app.kubernetes.io/instance: qliksense
                app.kubernetes.io/name: keycloak
            topologyKey: kubernetes.io/hostname
      containers:
      - command:
        - /scripts/keycloak.sh
        image: jboss/keycloak:9.0.2
        imagePullPolicy: IfNotPresent
        lifecycle: null
        livenessProbe:
          httpGet:
            path: /auth/
            port: http
          initialDelaySeconds: 300
          timeoutSeconds: 5
        name: main
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 1
        resources: {}
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
        volumeMounts:
        - mountPath: /scripts
          name: sh
          readOnly: true
        - mountPath: /secrets
          name: secrets
          readOnly: true
        - mountPath: /opt/jboss/startup-scripts
          name: startup
          readOnly: true
        - mountPath: /realm/
          name: realm
          readOnly: true
        - mountPath: /opt/jboss/keycloak/themes/qliktheme
          name: theme
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
      serviceAccountName: default
      terminationGracePeriodSeconds: 60
      volumes:
      - configMap:
          defaultMode: 365
          name: qliksense-keycloak-sh
        name: sh
      - name: secrets
        secret:
          secretName: qliksense-keycloak-secrets-mbg282297b
      - configMap:
          defaultMode: 365
          name: qliksense-keycloak-startup
        name: startup
      - name: realm
        secret:
          secretName: qliksense-keycloak-realm-g7g58gk675
      - emptyDir: {}
        name: theme
  updateStrategy:
    type: RollingUpdate
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:812117193213:certificate/b709fa40-ad89-49f3-ac27-318781fcb99b
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    # kubernetes.io/ingress.global-static-ip-name: keycloak-ip
    # networking.gke.io/managed-certificates: qliksense-keycloak
  labels:
    app: keycloak
    app.kubernetes.io/instance: qliksense
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloak
    helm.sh/chart: keycloak-7.6.0
    release: qliksense
  name: qliksense-keycloak
  namespace: default
spec:
  rules:
  - host: keycloak.devqseok.tk
    http:
      paths:
      - backend:
          serviceName: qliksense-keycloak-http
          servicePort: http
        path: /*
# ---
# apiVersion: networking.gke.io/v1beta1
# kind: ManagedCertificate
# metadata:
#   labels:
#     app: keycloak
#     release: qliksense
#   name: qliksense-keycloak
#   namespace: default
# spec:
#   domains:
#   - keycloak.devqseok.tk
